--- a/Code/Attribute importance analysis.ipynb
+++ b/Code/Attribute importance analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "initial-shopping",
+   "id": "genuine-intranet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dressed-shipping",
+   "id": "indie-major",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "round-perth",
+   "id": "comparative-newman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "impressive-phase",
+   "id": "surgical-license",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "retired-dutch",
+   "id": "liable-franklin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "concerned-surface",
+   "id": "surprised-commissioner",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "suspended-throat",
+   "id": "brilliant-approval",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "threaded-reception",
+   "id": "mounted-longer",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "developed-annual",
+   "id": "complicated-alpha",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "marked-nickel",
+   "id": "front-candle",
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +1175,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "approved-recovery",
+   "id": "medieval-anchor",
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "restricted-maximum",
+   "id": "defensive-asian",
    "metadata": {},
    "outputs": [
     {
@@ -1229,8 +1229,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "boring-access",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['MW', 'AMW', 'Mv', 'Mi', 'nTA', 'RBF', 'nDB']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "selected_features = []\n",
+    "for key in col_counts.keys():\n",
+    "    if col_counts[key] < 100:\n",
+    "        break\n",
+    "    selected_features.append(key)\n",
+    "selected_features"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "orange-visibility",
+   "id": "serious-klein",
    "metadata": {},
    "outputs": [],
    "source": []
