--- a/Code/Randomised checks.ipynb
+++ b/Code/Randomised checks.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "col_names = data.columns\n",
-    "x_cols = ['MW', 'AMW', 'Mv', 'Mi', 'nTA', 'RBF', 'nDB']\n",
+    "x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV']\n",
     "X_full = data[col_names[3:]]\n",
     "y = data[col_names[2]]"
    ]
@@ -119,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "civil-truck",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[3, 4, 5, 6, 7, 8, 9]"
+       "[370, 657, 791, 1236, 1258]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
+   "id": "logical-recommendation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_sel = X_train[:, x_col_idxs]\n",
+    "X_val_sel = X_valid[:, x_col_idxs]\n",
+    "history = model.fit(X_train_sel, y_train, validation_data=(X_val_sel, y_valid), verbose=0, epochs=100)\n",
+    "results.append({'idxs': x_col_idxs, 'loss': history.history['loss'][-1], 'val loss': history.history['val_loss'][-1]})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "empty-monroe",
    "metadata": {},
    "outputs": [],
@@ -151,102 +164,107 @@
     "    idxs = rng.choice(len(col_names)-3, size=len(x_cols), replace=False)\n",
     "    X_train_sel = X_train[:, idxs]\n",
     "    X_val_sel = X_valid[:, idxs]\n",
-    "    history = model.fit(X_train_sel, y_train, validation_data=(X_val_sel, y_valid), verbose=0, epochs=25)\n",
+    "    history = model.fit(X_train_sel, y_train, validation_data=(X_val_sel, y_valid), verbose=0, epochs=100)\n",
     "    results.append({'idxs': idxs, 'loss': history.history['loss'][-1], 'val loss': history.history['val_loss'][-1]})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "clean-williams",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'idxs': array([ 797, 1140,  365,  254,  782,  648, 1195], dtype=int64),\n",
-       "  'loss': 0.15129490196704865,\n",
-       "  'val loss': 0.1431145966053009},\n",
-       " {'idxs': array([ 546,  374, 1123, 1218,  190, 1248,   56], dtype=int64),\n",
-       "  'loss': 0.06314419955015182,\n",
-       "  'val loss': 0.06967666745185852},\n",
-       " {'idxs': array([971, 422, 145, 397, 651, 589,  27], dtype=int64),\n",
-       "  'loss': 0.15063151717185974,\n",
-       "  'val loss': 0.13067598640918732},\n",
-       " {'idxs': array([ 476, 1178,  329,    6, 1193,  303,  936], dtype=int64),\n",
-       "  'loss': 0.1608635038137436,\n",
-       "  'val loss': 0.14364568889141083},\n",
-       " {'idxs': array([ 905,  936,  461,  753, 1101,   56,  224], dtype=int64),\n",
-       "  'loss': 0.06778114289045334,\n",
-       "  'val loss': 0.07215940207242966},\n",
-       " {'idxs': array([ 628,  181,  545, 1218, 1176,   17,  626], dtype=int64),\n",
-       "  'loss': 0.2004784196615219,\n",
-       "  'val loss': 0.1954578012228012},\n",
-       " {'idxs': array([ 152,  965,  874,  636, 1215,  372, 1166], dtype=int64),\n",
-       "  'loss': 0.09722306579351425,\n",
-       "  'val loss': 0.08160001784563065},\n",
-       " {'idxs': array([ 155,  164,  928,  105,  897,  546, 1038], dtype=int64),\n",
-       "  'loss': 0.06643984466791153,\n",
-       "  'val loss': 0.06567714363336563},\n",
-       " {'idxs': array([ 656,  833,  165,  613,  394, 1203,  638], dtype=int64),\n",
-       "  'loss': 0.12517116963863373,\n",
-       "  'val loss': 0.1165229082107544},\n",
-       " {'idxs': array([ 176,  186,  133, 1056,  696,  796,  910], dtype=int64),\n",
-       "  'loss': 0.1082937940955162,\n",
-       "  'val loss': 0.11782592535018921},\n",
-       " {'idxs': array([1170, 1011,  543,  927,  227,  799,  588], dtype=int64),\n",
-       "  'loss': 0.1253843754529953,\n",
-       "  'val loss': 0.12311914563179016},\n",
-       " {'idxs': array([1040,  314, 1000,  668,  292,  582,  420], dtype=int64),\n",
-       "  'loss': 0.11814665049314499,\n",
-       "  'val loss': 0.13130824267864227},\n",
-       " {'idxs': array([ 363,  149,  470,  517,  143,  536, 1165], dtype=int64),\n",
-       "  'loss': 0.08248739689588547,\n",
-       "  'val loss': 0.09309753030538559},\n",
-       " {'idxs': array([1250,  297,  337, 1058,  938,  310, 1028], dtype=int64),\n",
-       "  'loss': 0.13078899681568146,\n",
-       "  'val loss': 0.14304912090301514},\n",
-       " {'idxs': array([1163, 1036,  448,  241,  400,  390,  183], dtype=int64),\n",
-       "  'loss': 0.08601122349500656,\n",
-       "  'val loss': 0.08271294087171555},\n",
-       " {'idxs': array([724, 572, 192,  26, 680, 357, 145], dtype=int64),\n",
-       "  'loss': 0.18540072441101074,\n",
-       "  'val loss': 0.18029852211475372},\n",
-       " {'idxs': array([ 538,  741,  855, 1010, 1043,  495,  648], dtype=int64),\n",
-       "  'loss': 0.08745918422937393,\n",
-       "  'val loss': 0.06767529994249344},\n",
-       " {'idxs': array([1119, 1067,  228,   54,  619,  298,  673], dtype=int64),\n",
-       "  'loss': 0.10122612863779068,\n",
-       "  'val loss': 0.09396298974752426},\n",
-       " {'idxs': array([  61,    8,  469,  659, 1164, 1125,  353], dtype=int64),\n",
-       "  'loss': 0.06460806727409363,\n",
-       "  'val loss': 0.07139048725366592},\n",
-       " {'idxs': array([1159,  124, 1061, 1052, 1137, 1008,  865], dtype=int64),\n",
-       "  'loss': 0.2433721274137497,\n",
-       "  'val loss': 0.2471286505460739},\n",
-       " {'idxs': array([ 787,  169,  929, 1040,  774,  806,  979], dtype=int64),\n",
-       "  'loss': 0.13119614124298096,\n",
-       "  'val loss': 0.12036310881376266},\n",
-       " {'idxs': array([862, 804, 314, 984, 483, 335, 580], dtype=int64),\n",
-       "  'loss': 0.0709681361913681,\n",
-       "  'val loss': 0.07071381062269211},\n",
-       " {'idxs': array([ 635,  461, 1258,  757,  291,  928,  424], dtype=int64),\n",
-       "  'loss': 0.06930344551801682,\n",
-       "  'val loss': 0.08149465918540955},\n",
-       " {'idxs': array([ 372,  605,  843, 1152, 1191,  994, 1075], dtype=int64),\n",
-       "  'loss': 0.2667837142944336,\n",
-       "  'val loss': 0.2853243350982666},\n",
-       " {'idxs': array([ 965, 1011,  254,  670,  818,  613,  695], dtype=int64),\n",
-       "  'loss': 0.26326456665992737,\n",
-       "  'val loss': 0.2590619623661041}]"
+       "[{'idxs': [370, 657, 791, 1236, 1258],\n",
+       "  'loss': 0.035716813057661057,\n",
+       "  'val loss': 0.038644127547740936},\n",
+       " {'idxs': array([972, 552, 823, 112, 545], dtype=int64),\n",
+       "  'loss': 0.04792053997516632,\n",
+       "  'val loss': 0.045133695006370544},\n",
+       " {'idxs': array([1227,  118,  661,  959,  926], dtype=int64),\n",
+       "  'loss': 0.04735381901264191,\n",
+       "  'val loss': 0.047686923295259476},\n",
+       " {'idxs': array([ 629, 1054,  566,  466,  230], dtype=int64),\n",
+       "  'loss': 0.04228797182440758,\n",
+       "  'val loss': 0.06019053980708122},\n",
+       " {'idxs': array([ 685,  286,  567,  557, 1033], dtype=int64),\n",
+       "  'loss': 0.0398203507065773,\n",
+       "  'val loss': 0.054395515471696854},\n",
+       " {'idxs': array([ 208, 1078, 1040,  348,  795], dtype=int64),\n",
+       "  'loss': 0.0408223420381546,\n",
+       "  'val loss': 0.08544125407934189},\n",
+       " {'idxs': array([1123,  980,  560, 1219,  853], dtype=int64),\n",
+       "  'loss': 0.052374254912137985,\n",
+       "  'val loss': 0.06363093852996826},\n",
+       " {'idxs': array([ 55, 625, 687, 936, 194], dtype=int64),\n",
+       "  'loss': 0.02891695313155651,\n",
+       "  'val loss': 0.08723362535238266},\n",
+       " {'idxs': array([1140,  466,  409,  516, 1215], dtype=int64),\n",
+       "  'loss': 0.04005095362663269,\n",
+       "  'val loss': 0.04153389483690262},\n",
+       " {'idxs': array([581, 416, 598, 863, 163], dtype=int64),\n",
+       "  'loss': 0.027472279965877533,\n",
+       "  'val loss': 0.10210134834051132},\n",
+       " {'idxs': array([ 882,  792, 1047,  201,  549], dtype=int64),\n",
+       "  'loss': 0.03529377654194832,\n",
+       "  'val loss': 0.05643857643008232},\n",
+       " {'idxs': array([ 487, 1131, 1058,  546, 1011], dtype=int64),\n",
+       "  'loss': 0.046575482934713364,\n",
+       "  'val loss': 0.05368855223059654},\n",
+       " {'idxs': array([ 175, 1046,  251,    9, 1013], dtype=int64),\n",
+       "  'loss': 0.03601078316569328,\n",
+       "  'val loss': 0.07793936878442764},\n",
+       " {'idxs': array([982, 592, 886, 700, 348], dtype=int64),\n",
+       "  'loss': 0.04352152720093727,\n",
+       "  'val loss': 0.11284768581390381},\n",
+       " {'idxs': array([175, 842, 144, 308, 553], dtype=int64),\n",
+       "  'loss': 0.04596705362200737,\n",
+       "  'val loss': 0.06371325999498367},\n",
+       " {'idxs': array([799, 712, 961,  99, 722], dtype=int64),\n",
+       "  'loss': 0.04754658043384552,\n",
+       "  'val loss': 0.05583120509982109},\n",
+       " {'idxs': array([757,  38, 437, 381, 550], dtype=int64),\n",
+       "  'loss': 0.035671014338731766,\n",
+       "  'val loss': 0.05888107046484947},\n",
+       " {'idxs': array([  43, 1072, 1035,  294, 1246], dtype=int64),\n",
+       "  'loss': 0.04519198462367058,\n",
+       "  'val loss': 0.059691786766052246},\n",
+       " {'idxs': array([368, 545, 701, 158, 832], dtype=int64),\n",
+       "  'loss': 0.0489761084318161,\n",
+       "  'val loss': 0.05459625646471977},\n",
+       " {'idxs': array([1024,  525,  404,  510,  513], dtype=int64),\n",
+       "  'loss': 0.026411307975649834,\n",
+       "  'val loss': 0.07756233960390091},\n",
+       " {'idxs': array([581, 969, 908, 113, 877], dtype=int64),\n",
+       "  'loss': 0.05617016553878784,\n",
+       "  'val loss': 0.06107092276215553},\n",
+       " {'idxs': array([ 624,  876,  191, 1178,  625], dtype=int64),\n",
+       "  'loss': 0.04669462516903877,\n",
+       "  'val loss': 0.052541717886924744},\n",
+       " {'idxs': array([792, 764, 859, 378, 455], dtype=int64),\n",
+       "  'loss': 0.037649232894182205,\n",
+       "  'val loss': 0.09467028826475143},\n",
+       " {'idxs': array([ 460,  623,  425, 1209, 1143], dtype=int64),\n",
+       "  'loss': 0.04436897858977318,\n",
+       "  'val loss': 0.08592652529478073},\n",
+       " {'idxs': array([ 903, 1217,  979,  331,  328], dtype=int64),\n",
+       "  'loss': 0.05199187994003296,\n",
+       "  'val loss': 0.05604208633303642},\n",
+       " {'idxs': array([1136,  121,   99,  160,  562], dtype=int64),\n",
+       "  'loss': 0.050545305013656616,\n",
+       "  'val loss': 0.06519638746976852}]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "results"
+   ]
   },
   {
    "cell_type": "code",
