fix and exclude validation set

--- a/Code/Attribute importance analysis.ipynb
+++ b/Code/Attribute importance analysis.ipynb
@@ -26,7 +26,8 @@
     "#seeds = [10, 26, 31, 34, 44, 47, 67, 76, 86, 89]\n",
     "#seeds = [7, 8, 12, 19, 30, 41, 43, 68, 71, 84]\n",
     "#seeds = [2, 6, 8, 11, 14, 25, 27, 30, 39, 40, 45, 46, 47, 50, 52, 53, 55, 65, 77, 78, 82, 85, 86, 91, 93]\n",
-    "seeds = np.arange(100)"
+    "seeds = np.arange(100)\n",
+    "random_state=42"
    ]
   },
   {
@@ -58,9 +59,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_scaled = MinMaxScaler(feature_range=(0,1)).fit_transform(X)\n",
-    "X_scaled = pd.DataFrame(X_scaled)\n",
-    "X_scaled.columns = X.columns"
+    "X_scaled = MinMaxScaler(feature_range=(0,1)).fit_transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baking-subscription",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_scaled, y, test_size=0.1, random_state=random_state)\n",
+    "X_train = pd.DataFrame(X_train)\n",
+    "X_train.columns = X.columns"
    ]
   },
   {
@@ -218,9 +229,9 @@
     "    rng = np.random.default_rng(seed=seed)\n",
     "    for run in range(100):\n",
     "        #print('Seed: {}, run: {}'.format(seed, run))\n",
-    "        X_scaled['random'] = rng.random(size=len(X_scaled))\n",
-    "        perm = rng.permutation(len(X_scaled.columns))\n",
-    "        X_perm = X_scaled[X_scaled.columns[perm]]\n",
+    "        X_train['random'] = rng.random(size=len(X_train))\n",
+    "        perm = rng.permutation(len(X_train.columns))\n",
+    "        X_perm = X_train[X_train.columns[perm]]\n",
     "        rf = RandomForestRegressor(n_estimators=100, n_jobs=-1, oob_score=True, bootstrap=True, random_state=seed)\n",
     "        rf.fit(X_perm, y)\n",
     "        feature_importances_sorted, X_col_sorted = zip(*sorted(zip(rf.feature_importances_, X_perm.columns), reverse=True))\n",
