--- a/Code/DL Model based on statistics.ipynb
+++ b/Code/DL Model based on statistics.ipynb
@@ -66,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_valid, y_train, y_valid = train_test_split(X_scaled, y, test_size=0.2, random_state=seed)"
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_scaled, y, test_size=0.1, random_state=seed)"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "outputs": [],
    "source": [
     "model.compile(\n",
-    "    optimizer=tf.optimizers.Adam(learning_rate=0.005),\n",
+    "    optimizer=tf.optimizers.Adam(learning_rate=0.01),\n",
     "    loss='mean_squared_error')"
    ]
   },
@@ -139,223 +139,101 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/100\n",
-      "2/2 [==============================] - 0s 55ms/step - loss: 0.4506 - val_loss: 0.3464\n",
-      "Epoch 2/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.3186 - val_loss: 0.2330\n",
-      "Epoch 3/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.2100 - val_loss: 0.1534\n",
-      "Epoch 4/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.1335 - val_loss: 0.1133\n",
-      "Epoch 5/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.1102 - val_loss: 0.1063\n",
-      "Epoch 6/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.1122 - val_loss: 0.1004\n",
-      "Epoch 7/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.1111 - val_loss: 0.0827\n",
-      "Epoch 8/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0947 - val_loss: 0.0654\n",
-      "Epoch 9/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0806 - val_loss: 0.0604\n",
-      "Epoch 10/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0739 - val_loss: 0.0616\n",
-      "Epoch 11/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0737 - val_loss: 0.0607\n",
-      "Epoch 12/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0733 - val_loss: 0.0554\n",
-      "Epoch 13/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0687 - val_loss: 0.0456\n",
-      "Epoch 14/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0627 - val_loss: 0.0342\n",
-      "Epoch 15/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0570 - val_loss: 0.0264\n",
-      "Epoch 16/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0544 - val_loss: 0.0219\n",
-      "Epoch 17/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0532 - val_loss: 0.0191\n",
-      "Epoch 18/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0502 - val_loss: 0.0181\n",
-      "Epoch 19/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0477 - val_loss: 0.0189\n",
-      "Epoch 20/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0456 - val_loss: 0.0201\n",
-      "Epoch 21/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0445 - val_loss: 0.0196\n",
-      "Epoch 22/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0432 - val_loss: 0.0172\n",
-      "Epoch 23/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0409 - val_loss: 0.0143\n",
-      "Epoch 24/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0389 - val_loss: 0.0125\n",
-      "Epoch 25/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0392 - val_loss: 0.0124\n",
-      "Epoch 26/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0391 - val_loss: 0.0128\n",
-      "Epoch 27/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0372 - val_loss: 0.0143\n",
-      "Epoch 28/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0362 - val_loss: 0.0171\n",
-      "Epoch 29/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0355 - val_loss: 0.0176\n",
-      "Epoch 30/100\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0350 - val_loss: 0.0162\n",
-      "Epoch 31/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0342 - val_loss: 0.0153\n",
-      "Epoch 32/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0335 - val_loss: 0.0155\n",
-      "Epoch 33/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0332 - val_loss: 0.0162\n",
-      "Epoch 34/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0327 - val_loss: 0.0163\n",
-      "Epoch 35/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0323 - val_loss: 0.0168\n",
-      "Epoch 36/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0321 - val_loss: 0.0174\n",
-      "Epoch 37/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0318 - val_loss: 0.0174\n",
-      "Epoch 38/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0314 - val_loss: 0.0173\n",
-      "Epoch 39/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0313 - val_loss: 0.0173\n",
-      "Epoch 40/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0308 - val_loss: 0.0177\n",
-      "Epoch 41/100\n",
-      "2/2 [==============================] - ETA: 0s - loss: 0.019 - 0s 8ms/step - loss: 0.0305 - val_loss: 0.0179\n",
-      "Epoch 42/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0302 - val_loss: 0.0179\n",
-      "Epoch 43/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0300 - val_loss: 0.0178\n",
-      "Epoch 44/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0299 - val_loss: 0.0177\n",
-      "Epoch 45/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0296 - val_loss: 0.0172\n",
-      "Epoch 46/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0297 - val_loss: 0.0175\n",
-      "Epoch 47/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0293 - val_loss: 0.0186\n",
-      "Epoch 48/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0286 - val_loss: 0.0203\n",
-      "Epoch 49/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0290 - val_loss: 0.0203\n",
-      "Epoch 50/100\n",
-      "2/2 [==============================] - ETA: 0s - loss: 0.033 - 0s 8ms/step - loss: 0.0289 - val_loss: 0.0186\n",
-      "Epoch 51/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0282 - val_loss: 0.0165\n",
-      "Epoch 52/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0284 - val_loss: 0.0159\n",
-      "Epoch 53/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0284 - val_loss: 0.0166\n",
-      "Epoch 54/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0289 - val_loss: 0.0184\n",
-      "Epoch 55/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0276 - val_loss: 0.0178\n",
-      "Epoch 56/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0271 - val_loss: 0.0174\n",
-      "Epoch 57/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0269 - val_loss: 0.0175\n",
-      "Epoch 58/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0272 - val_loss: 0.0182\n",
-      "Epoch 59/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0265 - val_loss: 0.0202\n",
-      "Epoch 60/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0270 - val_loss: 0.0206\n",
-      "Epoch 61/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0264 - val_loss: 0.0191\n",
-      "Epoch 62/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0268 - val_loss: 0.0188\n",
-      "Epoch 63/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0259 - val_loss: 0.0199\n",
-      "Epoch 64/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0259 - val_loss: 0.0205\n",
-      "Epoch 65/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0256 - val_loss: 0.0189\n",
-      "Epoch 66/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0257 - val_loss: 0.0180\n",
-      "Epoch 67/100\n",
-      "2/2 [==============================] - ETA: 0s - loss: 0.030 - 0s 8ms/step - loss: 0.0254 - val_loss: 0.0188\n",
-      "Epoch 68/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0249 - val_loss: 0.0198\n",
-      "Epoch 69/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0249 - val_loss: 0.0208\n",
-      "Epoch 70/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0246 - val_loss: 0.0225\n",
-      "Epoch 71/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0248 - val_loss: 0.0221\n",
-      "Epoch 72/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0242 - val_loss: 0.0222\n",
-      "Epoch 73/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0242 - val_loss: 0.0220\n",
-      "Epoch 74/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0241 - val_loss: 0.0211\n",
-      "Epoch 75/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0238 - val_loss: 0.0210\n",
-      "Epoch 76/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0236 - val_loss: 0.0213\n",
-      "Epoch 77/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0239 - val_loss: 0.0211\n",
-      "Epoch 78/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0236 - val_loss: 0.0203\n",
-      "Epoch 79/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0235 - val_loss: 0.0207\n",
-      "Epoch 80/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0234 - val_loss: 0.0226\n",
-      "Epoch 81/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0233 - val_loss: 0.0233\n",
-      "Epoch 82/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0229 - val_loss: 0.0223\n",
-      "Epoch 83/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0230 - val_loss: 0.0212\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 84/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0228 - val_loss: 0.0215\n",
-      "Epoch 85/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0229 - val_loss: 0.0223\n",
-      "Epoch 86/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0226 - val_loss: 0.0211\n",
-      "Epoch 87/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0230 - val_loss: 0.0210\n",
-      "Epoch 88/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0226 - val_loss: 0.0233\n",
-      "Epoch 89/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0228 - val_loss: 0.0251\n",
-      "Epoch 90/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0226 - val_loss: 0.0229\n",
-      "Epoch 91/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0219 - val_loss: 0.0218\n",
-      "Epoch 92/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0219 - val_loss: 0.0211\n",
-      "Epoch 93/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0221 - val_loss: 0.0211\n",
-      "Epoch 94/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0224 - val_loss: 0.0211\n",
-      "Epoch 95/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0236 - val_loss: 0.0219\n",
-      "Epoch 96/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0227 - val_loss: 0.0258\n",
-      "Epoch 97/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0221 - val_loss: 0.0251\n",
-      "Epoch 98/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0216 - val_loss: 0.0227\n",
-      "Epoch 99/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0215 - val_loss: 0.0212\n",
-      "Epoch 100/100\n",
-      "2/2 [==============================] - 0s 8ms/step - loss: 0.0216 - val_loss: 0.0209\n"
+      "Epoch 1/25\n",
+      "2/2 [==============================] - 0s 55ms/step - loss: 0.4141 - val_loss: 0.2712\n",
+      "Epoch 2/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.1933 - val_loss: 0.0923\n",
+      "Epoch 3/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.1192 - val_loss: 0.0491\n",
+      "Epoch 4/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.1432 - val_loss: 0.0330\n",
+      "Epoch 5/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.1047 - val_loss: 0.0315\n",
+      "Epoch 6/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0759 - val_loss: 0.0552\n",
+      "Epoch 7/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0762 - val_loss: 0.0624\n",
+      "Epoch 8/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0779 - val_loss: 0.0498\n",
+      "Epoch 9/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0672 - val_loss: 0.0270\n",
+      "Epoch 10/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0542 - val_loss: 0.0076\n",
+      "Epoch 11/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0490 - val_loss: 0.0035\n",
+      "Epoch 12/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0508 - val_loss: 0.0044\n",
+      "Epoch 13/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0486 - val_loss: 0.0036\n",
+      "Epoch 14/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0434 - val_loss: 0.0048\n",
+      "Epoch 15/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0398 - val_loss: 0.0057\n",
+      "Epoch 16/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0393 - val_loss: 0.0051\n",
+      "Epoch 17/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0379 - val_loss: 0.0051\n",
+      "Epoch 18/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0362 - val_loss: 0.0071\n",
+      "Epoch 19/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0360 - val_loss: 0.0092\n",
+      "Epoch 20/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0356 - val_loss: 0.0082\n",
+      "Epoch 21/25\n",
+      "2/2 [==============================] - 0s 9ms/step - loss: 0.0342 - val_loss: 0.0065\n",
+      "Epoch 22/25\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0338 - val_loss: 0.0060\n",
+      "Epoch 23/25\n",
+      "2/2 [==============================] - 0s 7ms/step - loss: 0.0340 - val_loss: 0.0064\n",
+      "Epoch 24/25\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0331 - val_loss: 0.0084\n",
+      "Epoch 25/25\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0323 - val_loss: 0.0102\n"
      ]
     }
    ],
    "source": [
-    "history = model.fit(X_train, y_train, validation_data=(X_valid, y_valid), epochs=100)"
+    "history = model.fit(X_train, y_train, validation_data=(X_valid, y_valid), epochs=25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "spoken-equipment",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "imported-duration",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "true: 0.328, predicted: 0.2745606005191803\n",
+      "true: 0.896, predicted: 0.8408241271972656\n",
+      "true: 0.817, predicted: 0.9118985533714294\n",
+      "true: 0.765, predicted: 0.7854444980621338\n",
+      "true: 0.893, predicted: 1.085049033164978\n",
+      "true: 0.733, predicted: 0.8283784985542297\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(y_pred.shape[0]):\n",
+    "    print('true: {}, predicted: {}'.format(y_valid.iloc[i], y_pred[i, 0]))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spoken-equipment",
+   "id": "classical-perfume",
    "metadata": {},
    "outputs": [],
    "source": []
