--- a/Code/Recursive Feature Extraction.ipynb
+++ b/Code/Recursive Feature Extraction.ipynb
@@ -18,17 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "pediatric-spine",
    "metadata": {},
    "outputs": [],
    "source": [
-    "seeds = np.arange(100)"
+    "seeds = np.arange(100)\n",
+    "random_state=42"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "critical-cross",
    "metadata": {},
    "outputs": [],
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "subject-jerusalem",
    "metadata": {},
    "outputs": [],
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "sustained-party",
    "metadata": {},
    "outputs": [],
@@ -62,7 +63,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
+   "id": "interpreted-madrid",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_valid, y_train, y_valid = train_test_split(X_scaled, y, test_size=0.1, random_state=random_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "sitting-suspension",
    "metadata": {},
    "outputs": [],
@@ -72,129 +83,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "unnecessary-telling",
    "metadata": {},
    "outputs": [],
    "source": [
     "for seed in seeds:\n",
     "    rf = RandomForestRegressor(n_estimators=100, n_jobs=-1, oob_score=True, bootstrap=True, random_state=seed)\n",
-    "    selector = RFE(rf, n_features_to_select=5, step=0.1).fit(X_scaled, y)\n",
+    "    selector = RFE(rf, n_features_to_select=2, step=0.1).fit(X_train, y_train)\n",
     "    selected_cols.append([X.columns[i] for i in range(len(selector.support_)) if selector.support_[i]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "immune-offering",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'TDB04s', 'Mor04m', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor14s', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_LogP_2', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'H3m', 'LUMO / eV'],\n",
-       " ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'TDB04s', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor14s', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor11u', 'Mor14u', 'Mor04m', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor14s', 'E1p', 'LUMO / eV'],\n",
-       " ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'P_VSA_e_3', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor14s', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'TDB04s', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['GATS4s', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'VE2sign_G', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor29v', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'R5p+', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['GATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor22s', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'CATS3D_02_AP', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_LogP_2', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor14s', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor14s', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_LogP_2', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor14s', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor22s', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor29v', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor14u', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor22s', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor14s', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor14u', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['GATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'VE2sign_G', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'TDB04s', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'Mor14s', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor14u', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       " ['P_VSA_MR_5', 'Mor14u', 'Mor04m', 'E1p', 'LUMO / eV']]"
+       "[['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor22s'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor22s'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['Mor04m', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['Mor04m', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['Mor04m', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['Mor04m', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['P_VSA_MR_5', 'Mor04m'],\n",
+       " ['Mor04m', 'LUMO / eV']]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "confirmed-remainder",
    "metadata": {},
    "outputs": [],
@@ -215,18 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "strong-pride",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 1,  2,  8,  1,  3,  1, 40,  1, 16,  1,  8,  3,  2,  1,  1,  1,  3,\n",
-       "        1,  1,  3,  2], dtype=int64)"
+       "array([ 5, 54, 39,  2], dtype=int64)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,38 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "dying-stanley",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([['GATS4s', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       "       ['GATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       "       ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       "       ['MATS5v', 'P_VSA_MR_5', 'Mor04m', 'HOMO / eV', 'LUMO / eV'],\n",
-       "       ['P_VSA_LogP_2', 'P_VSA_MR_5', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor04m', 'CATS3D_02_AP', 'HOMO / eV', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor04m', 'E1p', 'H3m', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor04m', 'E1p', 'HOMO / eV', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor04m', 'E1p', 'R5p+', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor04m', 'Mor14s', 'E1p', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor04m', 'Mor22s', 'E1p', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor04m', 'Mor29v', 'E1p', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor11u', 'Mor14u', 'Mor04m', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor14s', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor14u', 'E1p', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'Mor14u', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'P_VSA_e_3', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'TDB04s', 'Mor04m', 'CATS3D_02_AP', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'TDB04s', 'Mor04m', 'E1p', 'LUMO / eV'],\n",
-       "       ['P_VSA_MR_5', 'VE2sign_G', 'Mor04m', 'E1p', 'LUMO / eV']],\n",
-       "      dtype='<U12')"
+       "array([['Mor04m', 'LUMO / eV'],\n",
+       "       ['P_VSA_MR_5', 'LUMO / eV'],\n",
+       "       ['P_VSA_MR_5', 'Mor04m'],\n",
+       "       ['P_VSA_MR_5', 'Mor22s']], dtype='<U10')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,8 +271,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "romantic-share",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['P_VSA_MR_5', 'LUMO / eV'], dtype='<U10')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vals[np.argmax(counts)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "pediatric-marks",
    "metadata": {},
    "outputs": [],
    "source": []
