update best attribute selection

--- a/Code/Attribute importance analysis.ipynb
+++ b/Code/Attribute importance analysis.ipynb
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baking-subscription",
+   "id": "polish-playing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1460,7 +1460,7 @@
     }
    ],
    "source": [
-    "most_used = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV']\n",
+    "most_used = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
     "for m in most_used:\n",
     "    print(m, rd[m])"
    ]
