--- a/Code/Randomised checks.ipynb
+++ b/Code/Randomised checks.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "col_names = data.columns\n",
-    "x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV']\n",
+    "x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
     "X_full = data[col_names[3:]]\n",
     "y = data[col_names[2]]"
    ]
@@ -126,7 +126,7 @@
     {
      "data": {
       "text/plain": [
-       "[370, 657, 791, 1236, 1258]"
+       "[370, 657, 791, 758, 1258]"
       ]
      },
      "execution_count": 11,
@@ -177,84 +177,84 @@
     {
      "data": {
       "text/plain": [
-       "[{'idxs': [370, 657, 791, 1236, 1258],\n",
-       "  'loss': 0.03230303153395653,\n",
-       "  'val loss': 0.03562900424003601},\n",
+       "[{'idxs': [370, 657, 791, 758, 1258],\n",
+       "  'loss': 0.0407479964196682,\n",
+       "  'val loss': 0.03569430485367775},\n",
        " {'idxs': array([972, 552, 823, 112, 545], dtype=int64),\n",
-       "  'loss': 0.045229025185108185,\n",
-       "  'val loss': 0.025419676676392555},\n",
+       "  'loss': 0.052331890910863876,\n",
+       "  'val loss': 0.014153177849948406},\n",
        " {'idxs': array([1227,  118,  661,  959,  926], dtype=int64),\n",
-       "  'loss': 0.046594876796007156,\n",
-       "  'val loss': 0.03695283830165863},\n",
+       "  'loss': 0.05302339047193527,\n",
+       "  'val loss': 0.03510885313153267},\n",
        " {'idxs': array([ 629, 1054,  566,  466,  230], dtype=int64),\n",
-       "  'loss': 0.04591944441199303,\n",
-       "  'val loss': 0.022357648238539696},\n",
+       "  'loss': 0.043198052793741226,\n",
+       "  'val loss': 0.02604661136865616},\n",
        " {'idxs': array([ 685,  286,  567,  557, 1033], dtype=int64),\n",
-       "  'loss': 0.04047618433833122,\n",
-       "  'val loss': 0.016424372792243958},\n",
+       "  'loss': 0.04422992095351219,\n",
+       "  'val loss': 0.01709439419209957},\n",
        " {'idxs': array([ 208, 1078, 1040,  348,  795], dtype=int64),\n",
-       "  'loss': 0.048129864037036896,\n",
-       "  'val loss': 0.03343585133552551},\n",
+       "  'loss': 0.047220077365636826,\n",
+       "  'val loss': 0.03763711452484131},\n",
        " {'idxs': array([1123,  980,  560, 1219,  853], dtype=int64),\n",
-       "  'loss': 0.05517670884728432,\n",
-       "  'val loss': 0.02494923211634159},\n",
+       "  'loss': 0.05452549457550049,\n",
+       "  'val loss': 0.023836536332964897},\n",
        " {'idxs': array([ 55, 625, 687, 936, 194], dtype=int64),\n",
-       "  'loss': 0.029710344970226288,\n",
-       "  'val loss': 0.04035470262169838},\n",
+       "  'loss': 0.0319579653441906,\n",
+       "  'val loss': 0.03812388703227043},\n",
        " {'idxs': array([1140,  466,  409,  516, 1215], dtype=int64),\n",
-       "  'loss': 0.03999628126621246,\n",
-       "  'val loss': 0.009757837280631065},\n",
+       "  'loss': 0.0412449836730957,\n",
+       "  'val loss': 0.008724517188966274},\n",
        " {'idxs': array([581, 416, 598, 863, 163], dtype=int64),\n",
-       "  'loss': 0.03671326860785484,\n",
-       "  'val loss': 0.05306801572442055},\n",
+       "  'loss': 0.03831624984741211,\n",
+       "  'val loss': 0.02567535825073719},\n",
        " {'idxs': array([ 882,  792, 1047,  201,  549], dtype=int64),\n",
-       "  'loss': 0.0332551933825016,\n",
-       "  'val loss': 0.02444854937493801},\n",
+       "  'loss': 0.03147454559803009,\n",
+       "  'val loss': 0.022747276350855827},\n",
        " {'idxs': array([ 487, 1131, 1058,  546, 1011], dtype=int64),\n",
-       "  'loss': 0.047027841210365295,\n",
-       "  'val loss': 0.011595205403864384},\n",
+       "  'loss': 0.047579601407051086,\n",
+       "  'val loss': 0.00967223197221756},\n",
        " {'idxs': array([ 175, 1046,  251,    9, 1013], dtype=int64),\n",
-       "  'loss': 0.03924015536904335,\n",
-       "  'val loss': 0.030123881995677948},\n",
+       "  'loss': 0.03650321811437607,\n",
+       "  'val loss': 0.03772147372364998},\n",
        " {'idxs': array([982, 592, 886, 700, 348], dtype=int64),\n",
-       "  'loss': 0.05047743394970894,\n",
-       "  'val loss': 0.06753792613744736},\n",
+       "  'loss': 0.05157969519495964,\n",
+       "  'val loss': 0.06193133816123009},\n",
        " {'idxs': array([175, 842, 144, 308, 553], dtype=int64),\n",
-       "  'loss': 0.05023784190416336,\n",
-       "  'val loss': 0.003665484255179763},\n",
+       "  'loss': 0.050586577504873276,\n",
+       "  'val loss': 0.004453748464584351},\n",
        " {'idxs': array([799, 712, 961,  99, 722], dtype=int64),\n",
-       "  'loss': 0.04667006433010101,\n",
-       "  'val loss': 0.02208389900624752},\n",
+       "  'loss': 0.048638228327035904,\n",
+       "  'val loss': 0.0211504977196455},\n",
        " {'idxs': array([757,  38, 437, 381, 550], dtype=int64),\n",
-       "  'loss': 0.037232622504234314,\n",
-       "  'val loss': 0.0401465930044651},\n",
+       "  'loss': 0.035046108067035675,\n",
+       "  'val loss': 0.03123084455728531},\n",
        " {'idxs': array([  43, 1072, 1035,  294, 1246], dtype=int64),\n",
-       "  'loss': 0.03348822146654129,\n",
-       "  'val loss': 0.016509955748915672},\n",
+       "  'loss': 0.03299005329608917,\n",
+       "  'val loss': 0.01709398441016674},\n",
        " {'idxs': array([368, 545, 701, 158, 832], dtype=int64),\n",
-       "  'loss': 0.04895659163594246,\n",
-       "  'val loss': 0.028846627101302147},\n",
+       "  'loss': 0.05014319717884064,\n",
+       "  'val loss': 0.028501778841018677},\n",
        " {'idxs': array([1024,  525,  404,  510,  513], dtype=int64),\n",
-       "  'loss': 0.045309558510780334,\n",
-       "  'val loss': 0.01634453982114792},\n",
+       "  'loss': 0.04178829491138458,\n",
+       "  'val loss': 0.010388446971774101},\n",
        " {'idxs': array([581, 969, 908, 113, 877], dtype=int64),\n",
-       "  'loss': 0.05712682381272316,\n",
-       "  'val loss': 0.027307817712426186},\n",
+       "  'loss': 0.05515079200267792,\n",
+       "  'val loss': 0.02417341060936451},\n",
        " {'idxs': array([ 624,  876,  191, 1178,  625], dtype=int64),\n",
-       "  'loss': 0.044995520263910294,\n",
-       "  'val loss': 0.06368536502122879},\n",
+       "  'loss': 0.042733367532491684,\n",
+       "  'val loss': 0.061534177511930466},\n",
        " {'idxs': array([792, 764, 859, 378, 455], dtype=int64),\n",
-       "  'loss': 0.04378595948219299,\n",
-       "  'val loss': 0.04479505494236946},\n",
+       "  'loss': 0.04385894164443016,\n",
+       "  'val loss': 0.03990562632679939},\n",
        " {'idxs': array([ 460,  623,  425, 1209, 1143], dtype=int64),\n",
-       "  'loss': 0.04041283577680588,\n",
-       "  'val loss': 0.09637372940778732},\n",
+       "  'loss': 0.03868145868182182,\n",
+       "  'val loss': 0.1063578650355339},\n",
        " {'idxs': array([ 903, 1217,  979,  331,  328], dtype=int64),\n",
-       "  'loss': 0.05470002070069313,\n",
-       "  'val loss': 0.028501437976956367},\n",
+       "  'loss': 0.05534837767481804,\n",
+       "  'val loss': 0.029232537373900414},\n",
        " {'idxs': array([1136,  121,   99,  160,  562], dtype=int64),\n",
-       "  'loss': 0.051086124032735825,\n",
-       "  'val loss': 0.08787422627210617}]"
+       "  'loss': 0.051883500069379807,\n",
+       "  'val loss': 0.050858233124017715}]"
       ]
      },
      "execution_count": 14,
@@ -268,8 +268,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "recovered-display",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0.328\n",
+       "5     0.896\n",
+       "36    0.817\n",
+       "45    0.765\n",
+       "13    0.893\n",
+       "54    0.733\n",
+       "Name: LinIE ZE41, dtype: float64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_valid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "endangered-adjustment",
    "metadata": {},
    "outputs": [],
    "source": []
