--- a/Code/DL Model based on statistics.ipynb
+++ b/Code/DL Model based on statistics.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "col_names = data.columns\n",
-    "x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'CATS3D_02_AP', 'LUMO / eV']\n",
+    "x_cols = ['P_VSA_MR_5', 'Mor04m', 'E1p', 'Mor22s', 'LUMO / eV']\n",
     "X = data[x_cols]\n",
     "y = data[col_names[2]]"
    ]
@@ -140,55 +140,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "2/2 [==============================] - 0s 55ms/step - loss: 0.4141 - val_loss: 0.2712\n",
+      "2/2 [==============================] - 0s 40ms/step - loss: 0.4029 - val_loss: 0.2034\n",
       "Epoch 2/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.1933 - val_loss: 0.0923\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.1603 - val_loss: 0.0512\n",
       "Epoch 3/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.1192 - val_loss: 0.0491\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.1270 - val_loss: 0.0511\n",
       "Epoch 4/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.1432 - val_loss: 0.0330\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.1376 - val_loss: 0.0351\n",
       "Epoch 5/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.1047 - val_loss: 0.0315\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0884 - val_loss: 0.0433\n",
       "Epoch 6/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0759 - val_loss: 0.0552\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0814 - val_loss: 0.0673\n",
       "Epoch 7/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0762 - val_loss: 0.0624\n",
+      "2/2 [==============================] - 0s 7ms/step - loss: 0.0904 - val_loss: 0.0669\n",
       "Epoch 8/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0779 - val_loss: 0.0498\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0883 - val_loss: 0.0460\n",
       "Epoch 9/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0672 - val_loss: 0.0270\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0731 - val_loss: 0.0253\n",
       "Epoch 10/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0542 - val_loss: 0.0076\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0638 - val_loss: 0.0175\n",
       "Epoch 11/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0490 - val_loss: 0.0035\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0662 - val_loss: 0.0179\n",
       "Epoch 12/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0508 - val_loss: 0.0044\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0673 - val_loss: 0.0144\n",
       "Epoch 13/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0486 - val_loss: 0.0036\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0607 - val_loss: 0.0116\n",
       "Epoch 14/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0434 - val_loss: 0.0048\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0564 - val_loss: 0.0137\n",
       "Epoch 15/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0398 - val_loss: 0.0057\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0528 - val_loss: 0.0113\n",
       "Epoch 16/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0393 - val_loss: 0.0051\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0485 - val_loss: 0.0093\n",
       "Epoch 17/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0379 - val_loss: 0.0051\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0459 - val_loss: 0.0120\n",
       "Epoch 18/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0362 - val_loss: 0.0071\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0451 - val_loss: 0.0121\n",
       "Epoch 19/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0360 - val_loss: 0.0092\n",
+      "2/2 [==============================] - 0s 7ms/step - loss: 0.0424 - val_loss: 0.0115\n",
       "Epoch 20/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0356 - val_loss: 0.0082\n",
+      "2/2 [==============================] - 0s 3ms/step - loss: 0.0396 - val_loss: 0.0116\n",
       "Epoch 21/25\n",
-      "2/2 [==============================] - 0s 9ms/step - loss: 0.0342 - val_loss: 0.0065\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0406 - val_loss: 0.0128\n",
       "Epoch 22/25\n",
-      "2/2 [==============================] - 0s 0s/step - loss: 0.0338 - val_loss: 0.0060\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0396 - val_loss: 0.0148\n",
       "Epoch 23/25\n",
-      "2/2 [==============================] - 0s 7ms/step - loss: 0.0340 - val_loss: 0.0064\n",
+      "2/2 [==============================] - 0s 5ms/step - loss: 0.0372 - val_loss: 0.0199\n",
       "Epoch 24/25\n",
-      "2/2 [==============================] - 0s 3ms/step - loss: 0.0331 - val_loss: 0.0084\n",
+      "2/2 [==============================] - 0s 0s/step - loss: 0.0380 - val_loss: 0.0224\n",
       "Epoch 25/25\n",
-      "2/2 [==============================] - 0s 5ms/step - loss: 0.0323 - val_loss: 0.0102\n"
+      "2/2 [==============================] - 0s 8ms/step - loss: 0.0370 - val_loss: 0.0174\n"
      ]
     }
    ],
@@ -209,19 +209,19 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "imported-duration",
+   "id": "adjacent-filing",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "true: 0.328, predicted: 0.2745606005191803\n",
-      "true: 0.896, predicted: 0.8408241271972656\n",
-      "true: 0.817, predicted: 0.9118985533714294\n",
-      "true: 0.765, predicted: 0.7854444980621338\n",
-      "true: 0.893, predicted: 1.085049033164978\n",
-      "true: 0.733, predicted: 0.8283784985542297\n"
+      "true: 0.328, predicted: 0.471484512090683\n",
+      "true: 0.896, predicted: 0.808195948600769\n",
+      "true: 0.817, predicted: 0.9395850896835327\n",
+      "true: 0.765, predicted: 0.7283148169517517\n",
+      "true: 0.893, predicted: 1.1366854906082153\n",
+      "true: 0.733, predicted: 0.7463375329971313\n"
      ]
     }
    ],
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "classical-perfume",
+   "id": "numerical-leadership",
    "metadata": {},
    "outputs": [],
    "source": []
